K8S/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment

spec:
  replicas: 1
  selector:
    matchLabels:
      # what kind of system this is
      component: worker

  template:
    metadata:
      labels: 
        component: worker
    spec:
      containers: 
        - name: worker
          image: stephengrider/multi-worker
